--- a/app/templates/identity/community-header/standalone.hbs
+++ b/app/templates/identity/community-header/standalone.hbs
@@ -6,3 +6,15 @@
 <div class="separator separator-787878"></div>
 {{wds-community-header model=model class='color-FB7383'}}
 <div class="separator separator-FB7383"></div>
+{{wds-community-header model=model class='color-1'}}
+<div class="separator separator-1">MARVEL</div>
+{{wds-community-header model=model class='color-2'}}
+<div class="separator separator-2">WARFRAME</div>
+{{wds-community-header model=model class='color-3'}}
+<div class="separator separator-3">oldschoolrunescape</div>
+{{wds-community-header model=model class='color-4'}}
+<div class="separator separator-4">elderscrolls</div>
+{{wds-community-header model=model class='color-5'}}
+<div class="separator separator-5">yugioh</div>
+{{wds-community-header model=model class='color-6'}}
+<div class="separator separator-6">runescape</div>
