--- a/app/templates/components/wds-community-bar/local-navigation-level-2.hbs
+++ b/app/templates/components/wds-community-bar/local-navigation-level-2.hbs
@@ -1,5 +1,5 @@
 <div class="wds-community-bar__navigation-back" {{action onBackButtonClicked}}>
-	{{svg 'wds-icons-menu-control-tiny' class='wds-icon wds-icon-tiny'}} {{i18n 'back'}}
+	{{svg 'wds-icons-menu-control-tiny' class='wds-icon wds-icon-tiny'}} {{i18n 'back' ns='design-system'}}
 </div>
 {{#if firstLevelItem.href}}
 	<a
