Glocal nav fixes

--- a/app/templates/components/wds-global-navigation.hbs
+++ b/app/templates/components/wds-global-navigation.hbs
@@ -12,6 +12,7 @@
 	<div class="wds-global-navigation__content-bar-right">
 		<div class="wds-global-navigation__community-bar">
 			{{svg 'wds-company-logo-fandom-heart' class='wds-global-navigation__logo-heart'}}
+			<div class="wds-global-navigation__community-bar-separator"></div>
 			<div class="wds-community-bar__sitename">
 				{{sitename}}
 			</div>
